Roxy file manager using IFileSystem (final part)

--- a/src/Presentation/SmartStore.Web/Administration/Content/filemanager/lang/de.json
+++ b/src/Presentation/SmartStore.Web/Administration/Content/filemanager/lang/de.json
@@ -6,7 +6,7 @@
     "Preview": "Vorschau",
     "RenameFile": "Umbenennen",
     "DeleteFile": "Löschen",
-    "SelectFile": "Wählen",
+    "SelectFile": "Auswählen",
     "OrderBy": "Anordnen",
     "Name_asc": "&uarr;&nbsp;&nbsp;Name",
     "Size_asc": "&uarr;&nbsp;&nbsp;Größe",
@@ -18,7 +18,7 @@
     "Size": "Größe",
     "Date": "Datum",
     "Dimensions": "Dimensionen",
-    "Cancel": "Stornieren",
+    "Cancel": "Abbrechen",
     "LoadingDirectories": "Ordner laden...",
     "LoadingFiles": "Dateien laden...",
     "DirIsEmpty": "Ordner ist leer",
