--- a/src/Presentation/SmartStore.Web/Administration/Content/filemanager/lang/en.json
+++ b/src/Presentation/SmartStore.Web/Administration/Content/filemanager/lang/en.json
@@ -61,10 +61,10 @@
 "E_RenameDirInvalidPath":"Cannot rename directory - path doesn't exist",
 "E_RenameFile":"Error renaming file",
 "E_RenameFileInvalidPath":"Cannot rename file - file doesn't exist",
-"E_UploadNotAll":"There is and error uploading some files. ",
+"E_UploadNotAll":"There is and error uploading some files.",
 "E_UploadNoFiles":"There are no files to upload or file is too big.",
 "E_UploadInvalidPath":"Cannot upload files - path doesn't exist",
-"E_FileExtensionForbidden":"This type of files cannot be handeled - invalid extension ",
+"E_FileExtensionForbidden":"This type of file cannot be handled - invalid file extension.",
 "DownloadFile":"Download",
 "T_DownloadFile":"Download file",
 "E_CannotDeleteRoot":"Cannot delete root folder",
