--- a/src/Plugins/SmartStore.MegaMenu/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.MegaMenu/Localization/resources.de-de.xml
@@ -7,11 +7,62 @@
       <LocaleResource Name="AdminInstruction">
         <Value>
           <![CDATA[
-            Geben Sie zur Einrichtung dieses Plugins nachfolgend Ihre Daten an.
+            Dieses Plugin wird hauptsächlich innerhalb der Warengruppen-Konfiguration bedient.<br />
+            Zu diesem Zweck gibt es im Administrationsbereich von Warengruppen ein "Mega-Menu"-Tab, in dem jedes Megamenu individuell konfiguriert werden kann.<br />
+            Im Konfigurations-Bereich des Plugins werden nur Einstellungen vorgenommen, die globale Gültigkeit haben.<br />
           ]]>
         </Value>
       </LocaleResource>
-      
+
+      <LocaleResource Name="AdminInstructionCatMain">
+        <Value>
+          <![CDATA[
+            In diesem Tab nehmen Sie die Konfiguration des <i>MegaMenu</i>-Plugins für diese Warengruppe vor.
+            Im <a href="{0}">Konfigurations-Bereich des Plugins</a> werden lediglich Einstellungen vorgenommen, die globale Gültigkeit haben.<br />
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="BgPictures.Heading">
+        <Value>Hintergrund-Grafiken</Value>
+      </LocaleResource>
+      <LocaleResource Name="BgPictures.AdminInstruction">
+        <Value>
+          <![CDATA[
+            Hintergrund-Grafiken werden innerhalb des Dropdown-Elements dargestellt.<br/>
+            Die besten Ergebnisse erreicht man mit freigestellten PNG-Grafiken. <br/>
+            Diese können durch die Angabe der Offset-Eigenschaften sogar über den Bereich des Dropdown-Menus hinausragen. <br/>
+            Außerdem können Sie die Grafik frei verlinken, wodurch sie sich hervorragend als Promotion-Werkzeug nutzen lässt.
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="ShortSummary.Heading">
+        <Value>Einleitungsbereich (linke Spalte)</Value>
+      </LocaleResource>
+      <LocaleResource Name="ShortSummary.AdminInstruction">
+        <Value>
+          <![CDATA[
+            Für den Einleitungsbereich, der sich über die erste Spalte des Dropdown-Elements erstreckt, können Sie festlegen ob das Bild der Hauptwarengruppe dargestellt wird <br/>
+            und einen kleinen Einleitungstext erfassen. Bei diesem Text können Sie auch mit HTML-Formatierungen arbeiten (z.B. &lt;i&gt;, &lt;b&gt;, &lt;a&gt;, usw.).  <br/>
+            Der Text wird nur im Verbund mit der Grafik dargestellt.
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="Teaser.Heading">
+        <Value>Teaser</Value>
+      </LocaleResource>
+      <LocaleResource Name="Teaser.AdminInstruction">
+        <Value>
+          <![CDATA[
+            Der Teaser-Bereich in einem Dropdown-Menu bietet ihnen die Möglichkeit mehr Aufmerksamkeit auf Ihre Produkte zu lenken, <br/>
+            indem Sie z.B. eine Auswahl von Produkten bereits mit dem Produkt-Rotator innerhalb des Dropdown-Menus darstellen <br/>
+            oder vollkommen frei eigenes HTML definieren. <br/>
+          ]]>
+        </Value>
+      </LocaleResource>
+
       <LocaleResource Name="IsActive">
         <Value>Ist aktiv</Value>
       </LocaleResource>
@@ -19,152 +70,184 @@
         <Value>Bestimmt ob für die Warengruppe ein Megamenu ausgegeben wird.</Value>
       </LocaleResource>
       <LocaleResource Name="DisplayCategoryPicture">
-        <Value>Display category picture</Value>
+        <Value>Warengruppen-Vorschaubild anzeigen</Value>
       </LocaleResource>
       <LocaleResource Name="DisplayCategoryPicture.Hint">
-        <Value>Specifies whether a category picture will be displayed in the first column (on the right side of dropdown).</Value>
+        <Value>Bestimmt ob das Vorschaubild der Warengruppe innerhalb der ersten Spalte des Megamenu-Dropdowns angezeigt wird.</Value>
       </LocaleResource>
       <LocaleResource Name="DisplayBgPicture">
-        <Value>Display background picture</Value>
+        <Value>Hintergrundgrafik darstellen</Value>
       </LocaleResource>
       <LocaleResource Name="DisplayBgPicture.Hint">
-        <Value>Specifies whether a backgrund picture for the catgory dropdown will be displayed.</Value>
+        <Value>Bestimmt ob im Megamenu-Dropdown eine Hintergrundgrafik dargestellt wird.</Value>
       </LocaleResource>
       <LocaleResource Name="BgPictureId">
-        <Value>Background picture</Value>
+        <Value>Hintergrundgrafik</Value>
       </LocaleResource>
       <LocaleResource Name="BgPictureId.Hint">
-        <Value>The background picture of the catgory dropdown.</Value>
+        <Value>Die Hintergrundgrafik des Megamenu-Dropdowns.</Value>
       </LocaleResource>
       <LocaleResource Name="BgLink">
-        <Value>Link of the background picture</Value>
+        <Value>Link der Hintergrundgrafik</Value>
       </LocaleResource>
       <LocaleResource Name="BgLink.Hint">
-        <Value>Link of the background picture.</Value>
+        <Value>Link der Hintergrundgrafik</Value>
       </LocaleResource>
       <LocaleResource Name="BgAlignX">
-        <Value>Horizontal alignment</Value>
+        <Value>Horizontale Ausrichtung</Value>
       </LocaleResource>
       <LocaleResource Name="BgAlignX.Hint">
-        <Value>Specifies the horizontal alignment of background picture.</Value>
+        <Value>Bestimmt die horizontale Ausrichtung der Hintergrundgrafik.</Value>
       </LocaleResource>
       <LocaleResource Name="BgAlignY">
-        <Value>Vertical alignment</Value>
+        <Value>Vertikale Ausrichtung</Value>
       </LocaleResource>
       <LocaleResource Name="BgAlignY.Hint">
-        <Value>Specifies the vertical alignment of background picture.</Value>
+        <Value>Bestimmt die vertikale Ausrichtung der Hintergrundgrafik.</Value>
       </LocaleResource>
       <LocaleResource Name="BgOffsetX">
-        <Value>Horizontal offset</Value>
+        <Value>Horizontaler Versatz</Value>
       </LocaleResource>
       <LocaleResource Name="BgOffsetX.Hint">
-        <Value>Specifies the horizontal offset of background picture.</Value>
+        <Value>Bestimmt den horizontalen Versatz der Hintergrundgrafik.</Value>
       </LocaleResource>
       <LocaleResource Name="BgOffsetY">
-        <Value>Vertical offset</Value>
+        <Value>Vertikaler Versatz</Value>
       </LocaleResource>
       <LocaleResource Name="BgOffsetY.Hint">
-        <Value>Specifies the vertical offset of background picture.</Value>
+        <Value>Bestimmt den vertikaler Versatz der Hintergrundgrafik.</Value>
       </LocaleResource>
       <LocaleResource Name="MaxItemsPerColumn">
-        <Value>Maximum of items per column</Value>
+        <Value>Maximale Anzahl von Elementen pro Spalte</Value>
       </LocaleResource>
       <LocaleResource Name="MaxItemsPerColumn.Hint">
-        <Value>Specifies the maximum of items in one column.</Value>
+        <Value>Bestimmt die maximale Anzahl von Elementen pro Spalte.</Value>
       </LocaleResource>
       <LocaleResource Name="MaxSubItemsPerCategory">
-        <Value>maximum of sub items per category</Value>
+        <Value>Maximale Anzahl von Unterwarengruppen pro Warengruppe</Value>
       </LocaleResource>
       <LocaleResource Name="MaxSubItemsPerCategory.Hint">
-        <Value>Specifies the maximum of sub items per category.</Value>
+        <Value>Bestimmt die maximale Anzahl von Unterwarengruppen pro Warengruppe.</Value>
       </LocaleResource>
       <LocaleResource Name="Summary">
-        <Value>Summary</Value>
+        <Value>Einleitungstext</Value>
       </LocaleResource>
       <LocaleResource Name="Summary.Hint">
-        <Value>Specifies text that will be displayed below the category picture. This text will only be displayed if the category picture is displayed. Html is allowed.</Value>
+        <Value>
+          Bestimmt einen Einleitungstext der unterhalb des Warengruppen-Vorschaubildes dargestellt wird. 
+          Dieser Text wird nur dargestellt, wenn auch auch das Warengruppen-Vorschaubild angezeigt wird. 
+          Die Verwendung von Html-Tags innerhalb des Textes wird unterstützt. 
+        </Value>
       </LocaleResource>
       <LocaleResource Name="TeaserHtml">
-        <Value>Teaser Html</Value>
+        <Value>Teaser-Html</Value>
       </LocaleResource>
       <LocaleResource Name="TeaserHtml.Hint">
-        <Value>Replaces menu columns and displays the defined HTML instead.</Value>
+        <Value>Ersetzt Spalten des Dropdownmenus durch das hier definierte Html.</Value>
       </LocaleResource>
       <LocaleResource Name="HtmlColumnSpan">
-        <Value>Html column span</Value>
+        <Value>Reichweite des HTML-Textes </Value>
       </LocaleResource>
       <LocaleResource Name="HtmlColumnSpan.Hint">
-        <Value>Ranges from columns 1-4. 4 means no sub categories will be displayed. Html display and column span count start on the right side of the dropdown.</Value>
+        <Value>
+            Die Rechweite des Html-Textes kann 1-4 Spalten betragen. Wird hier der Wert von 4 Spalten eingestellt, werden keinerlei Navigationslemente geladen. 
+            Statt dessen verfügt der definierte Html-Inhalt über die komplette Breite des Megamenu-Dropdowns. Die Darstellung sowie die Belegung der festgelegten Spaltenanzahl, 
+            beginnt auf der rechten Seite des Dropdowns.
+        </Value>
       </LocaleResource>
       <LocaleResource Name="TeaserType">
-        <Value>Teaser type</Value>
+        <Value>Teaser-Typ</Value>
       </LocaleResource>
       <LocaleResource Name="TeaserType.Hint">
-        <Value>Defines the type of the teaser.</Value>
+        <Value>Bestimmt die Art des Teasers.</Value>
       </LocaleResource>
       <LocaleResource Name="TeaserRotatorItemSelectType">
-        <Value>Teaser rotator item select type</Value>
+        <Value>Produkt-Rotator Elementauswahl</Value>
       </LocaleResource>
       <LocaleResource Name="TeaserRotatorItemSelectType.Hint">
-        <Value>Defines the kind in which the rotatoritem will be choosen. The types deep-top, deep-random are implying to include sub categories when considering products.</Value>
+        <Value>
+          Bestimmt die Art, in der die Elemente für den Produkt-Rotator ausgewählt werden.
+          Deep-Top und Deep-Random beziehen bei der Auswahl auch Produkte von Unterwarengruppen ein.
+        </Value>
       </LocaleResource>
       <LocaleResource Name="TeaserRotatorProductIds">
-        <Value>Product ids</Value>
+        <Value>Produkt-Ids</Value>
       </LocaleResource>
       <LocaleResource Name="TeaserRotatorProductIds.Hint">
-        <Value>Ids of the picked products.</Value>
+        <Value>Ids der ausgewählten Produkte.</Value>
       </LocaleResource>
       <LocaleResource Name="DisplaySubItemsInline">
-        <Value>Display sub-items inline</Value>
+        <Value>Unterwarengruppen nicht umbrechen</Value>
       </LocaleResource>
       <LocaleResource Name="DisplaySubItemsInline.Hint">
-        <Value>Determines whether sub-items will be displayed separated by comma.</Value>
+        <Value>Bestimmt ob Unterwarengruppen umbrochen (eine Zeile pro Warengruppe) oder kommagetrennt dargestellt werden.</Value>
       </LocaleResource>
       <LocaleResource Name="AllowSubItemsColumnWrap">
-        <Value>Allow sub-items column wrap</Value>
+        <Value>Ausgabe von Unterwarengruppen in nächster Spalte zulassen</Value>
       </LocaleResource>
       <LocaleResource Name="AllowSubItemsColumnWrap.Hint">
-        <Value>Determines whether sub-items can be broken into a new comlumn.</Value>
+        <Value>
+          Bestimmt ob die Ausgabe von Unterwarengruppen unterbrochen und in der nächsten Spalte fortgesetzt werden kann,
+          wenn die noch darzustellende Anzahl von Unterwarengruppen die Menge der erlaubten Navigationselemente pro Spalte übersteigt.
+        </Value>
       </LocaleResource>
       <LocaleResource Name="SubItemsWrapTolerance">
-        <Value>Sub-items wrap tolerance</Value>
+        <Value>Umbruch-Toleranz</Value>
       </LocaleResource>
       <LocaleResource Name="SubItemsWrapTolerance.Hint">
-        <Value>Specifies a treshold which defines a tolarance value.</Value>
+        <Value>
+          Bestimmt einen Schwellwert, der die Anzahl der Warengruppen festlegt die mindestens noch vorhanden sein muss, 
+          damit die Ausgabe in der nächsten Spalte fortgesetzt wird.
+        </Value>
       </LocaleResource>
       <LocaleResource Name="FavorInMegamenu">
-        <Value>Favor in megamenu</Value>
+        <Value>Im Megamenu bevorzugen.</Value>
       </LocaleResource>
       <LocaleResource Name="FavorInMegamenu.Hint">
-        <Value>Specifies whether the category should be favored when building the nav structure (only applies to categories within the dropdown).</Value>
+        <Value>Bestimmt ob die Warengruppe bei der Erstellung der Navigationsstruktur bevorzugt werden soll (betrifft nur Warenngruppen die innerhalb des Dropdown-Menus ausgegeben werden).</Value>
       </LocaleResource>
-
-
       <LocaleResource Name="ProductRotatorInterval">
-        <Value>Product rotator interval</Value>
+        <Value>Produkt-Rotator Interval</Value>
       </LocaleResource>
       <LocaleResource Name="ProductRotatorInterval.Hint">
-        <Value>Specifies the interval after which the rotator scrolls to the next element.</Value>
+        <Value>Bestimmt das Interval nach dem der Rotator automatisch zum nächtsten Produkt wechselt.</Value>
       </LocaleResource>
       <LocaleResource Name="ProductRotatorDuration">
-        <Value>Product rotator duration</Value>
+        <Value>Produkt-Rotator Geschwindigkeit</Value>
       </LocaleResource>
       <LocaleResource Name="ProductRotatorDuration.Hint">
-        <Value>Specifies the duration the rotator needs to scroll to the next element.</Value>
+        <Value>Bestimmt die Zeit, die der Produkt-Rotator benötigt um zum nächsten Element zu navigieren.</Value>
       </LocaleResource>
       <LocaleResource Name="ProductRotatorCycle">
-        <Value>Product-Rotator cycle</Value>
+        <Value>Produkt-Rotator Zirkulation</Value>
       </LocaleResource>
       <LocaleResource Name="ProductRotatorCycle.Hint">
-        <Value>Specifies whether the product rotator scrolls back to the first element after reaching the last scrollable element.</Value>
+        <Value>Bestimmt ob der Produkt-Rotator zum ersten Element zurück navigiert nachdem das Ende der angegebenen Elemente erreicht wurde.</Value>
       </LocaleResource>
       <LocaleResource Name="MenuMinHeight">
         <Value>Menu-Mindesthöhe</Value>
       </LocaleResource>
       <LocaleResource Name="MenuMinHeight.Hint">
-        <Value>Legt die Mindesthöhe des Dropdown.</Value>
+        <Value>Legt die Mindesthöhe des Dropdown-Menus fest.</Value>
       </LocaleResource>
-      
+      <LocaleResource Name="MinChildCategoryThreshold">
+        <Value>Minimale Anzahl von Unterwarengruppen</Value>
+      </LocaleResource>
+      <LocaleResource Name="MinChildCategoryThreshold.Hint">
+        <Value>Legt die minimale Anzahl von Unterwarengruppen fest, welche ein Menuelement haben muss, damit es ausgegeben wird (0 bedeuted alles wird ausgegeben).</Value>
+      </LocaleResource>
+      <LocaleResource Name="MaxRotatorItems">
+        <Value>Maximale Anzahl von Rotator-Elementen</Value>
+      </LocaleResource>
+      <LocaleResource Name="MaxRotatorItems.Hint">
+        <Value>Besteimmt die maximale Anzahl von Elementen die innerhalb des Produkt-Rotators angezeigt werden.</Value>
+      </LocaleResource>
+      <LocaleResource Name="RotatorHeading">
+        <Value>Rotator Überschrift</Value>
+      </LocaleResource>
+      <LocaleResource Name="RotatorHeading.Hint">
+        <Value>Bestimmt die Überschrift des Produkt-Rotators.</Value>
+      </LocaleResource>
     </Children>
   </LocaleResource>
 </Language>
