--- a/src/Plugins/SmartStore.MegaMenu/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.MegaMenu/Localization/resources.en-us.xml
@@ -7,7 +7,57 @@
       <LocaleResource Name="AdminInstruction">
         <Value>
           <![CDATA[
-            Enter your data below to configure this plugin.
+            This Plugin will mainly be configured in category administration area.<br />
+            For this purpose there is a <i>MegaMenu</i> tab in configuration view of a category in which every megamenu dropdown element can be configured individually. <br /> 
+            Settings which have a global scope can be configured in the configuration view of the plugin.
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="AdminInstructionCatMain">
+        <Value>
+          <![CDATA[
+            In this tab you can configure the <i>MegaMenu</i> plugin for this category.</br>
+            Settings which have a global scope can be configured in the <a href="{0}">configuration view of the plugin</a>.
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="BgPictures.Heading">
+        <Value>Background Images</Value>
+      </LocaleResource>
+      <LocaleResource Name="BgPictures.AdminInstruction">
+        <Value>
+          <![CDATA[
+            Background images will be displayed within dropdown elements. For best results it's recommended to use exempted <i>png</i> graphics. </br>
+            These graphics can even protrude the borders of the dropdown element by specifying the offset properties. </br>
+            In addition you can freely link the graphics to any site you like thus making it a perfect promotion tool.
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="ShortSummary.Heading">
+        <Value>Introduction Area (left column)</Value>
+      </LocaleResource>
+      <LocaleResource Name="ShortSummary.AdminInstruction">
+        <Value>
+          <![CDATA[
+            For the introduction area which will be displayed in the first column of the dropdown element you can specify whether the category picture will be displayed <br />
+            and you can enter a short introductory text. For this text you can work with HTML formating (e.g. &lt;i&gt;, &lt;b&gt;, &lt;a&gt;, etc.).  <br/>
+            The text will only be displayed along with the category picture.
+          ]]>
+        </Value>
+      </LocaleResource>
+
+      <LocaleResource Name="Teaser.Heading">
+        <Value>Teaser</Value>
+      </LocaleResource>
+      <LocaleResource Name="Teaser.AdminInstruction">
+        <Value>
+          <![CDATA[           
+            The teaser area within a dropdown element enables you to put more emphasis on your products <br>
+            by displaying for instance a certain selection of products within the product rotator in the dropdown menu <br/>
+            or by displaying entirely freely defined HTML.<br/>
           ]]>
         </Value>
       </LocaleResource>
@@ -16,7 +66,7 @@
         <Value>Is active</Value>
       </LocaleResource>
       <LocaleResource Name="IsActive.Hint">
-        <Value>Specifies whether megamenu will be rendered for this category.</Value>
+        <Value>Specifies whether a megamenu dropdown element will be rendered for this category.</Value>
       </LocaleResource>
       <LocaleResource Name="DisplayCategoryPicture">
         <Value>Display category picture</Value>
@@ -28,13 +78,13 @@
         <Value>Display background picture</Value>
       </LocaleResource>
       <LocaleResource Name="DisplayBgPicture.Hint">
-        <Value>Specifies whether a backgrund picture for the catgory dropdown will be displayed.</Value>
+        <Value>Specifies whether a background picture for the catgory dropdown will be displayed.</Value>
       </LocaleResource>
       <LocaleResource Name="BgPictureId">
         <Value>Background picture</Value>
       </LocaleResource>
       <LocaleResource Name="BgPictureId.Hint">
-        <Value>The background picture of the catgory dropdown.</Value>
+        <Value>The background picture of the category dropdown.</Value>
       </LocaleResource>
       <LocaleResource Name="BgLink">
         <Value>Link of the background picture</Value>
@@ -67,19 +117,19 @@
         <Value>Specifies the vertical offset of background picture.</Value>
       </LocaleResource>
       <LocaleResource Name="MaxItemsPerColumn">
-        <Value>Maximum of items per column</Value>
+        <Value>Maximum amount of items per column</Value>
       </LocaleResource>
       <LocaleResource Name="MaxItemsPerColumn.Hint">
-        <Value>Specifies the maximum of items in one column.</Value>
+        <Value>Specifies the maximum amount of items in one column.</Value>
       </LocaleResource>
       <LocaleResource Name="MaxSubItemsPerCategory">
-        <Value>maximum of sub items per category</Value>
+        <Value>Maximum amount of sub items per category</Value>
       </LocaleResource>
       <LocaleResource Name="MaxSubItemsPerCategory.Hint">
-        <Value>Specifies the maximum of sub items per category.</Value>
+        <Value>Specifies the maximum amount of sub items per category.</Value>
       </LocaleResource>
       <LocaleResource Name="Summary">
-        <Value>Summary</Value>
+        <Value>Short summary</Value>
       </LocaleResource>
       <LocaleResource Name="Summary.Hint">
         <Value>Specifies text that will be displayed below the category picture. This text will only be displayed if the category picture is displayed. Html is allowed.</Value>
@@ -127,22 +177,22 @@
         <Value>Defines the badge type next to the category.</Value>
       </LocaleResource>
       <LocaleResource Name="DisplaySubItemsInline">
-        <Value>Display sub-items inline</Value>
+        <Value>Display sub items inline</Value>
       </LocaleResource>
       <LocaleResource Name="DisplaySubItemsInline.Hint">
-        <Value>Determines whether sub-items will be displayed separated by comma.</Value>
+        <Value>Determines whether sub items will be displayed separated by comma.</Value>
       </LocaleResource>
       <LocaleResource Name="AllowSubItemsColumnWrap">
-        <Value>Allow sub-items column wrap</Value>
+        <Value>Allow sub items column wrap</Value>
       </LocaleResource>
       <LocaleResource Name="AllowSubItemsColumnWrap.Hint">
-        <Value>Determines whether sub-items can be broken into a new comlumn.</Value>
+        <Value>Determines whether sub items can be broken into a new column.</Value>
       </LocaleResource>
       <LocaleResource Name="SubItemsWrapTolerance">
-        <Value>Sub-items wrap tolerance</Value>
+        <Value>Sub item wrap tolerance</Value>
       </LocaleResource>
       <LocaleResource Name="SubItemsWrapTolerance.Hint">
-        <Value>Specifies a treshold which defines a tolarance value.</Value>
+        <Value>Specifies a treshold which defines the amount of categories which have to be extant to proceed with the rendering in the next column.</Value>
       </LocaleResource>
       <LocaleResource Name="FavorInMegamenu">
         <Value>Favor in megamenu</Value>
@@ -150,9 +200,6 @@
       <LocaleResource Name="FavorInMegamenu.Hint">
         <Value>Specifies whether the category should be favored when building the nav structure (only applies to categories within the dropdown).</Value>
       </LocaleResource>
-
-
-
       <LocaleResource Name="ProductRotatorInterval">
         <Value>Product rotator interval</Value>
       </LocaleResource>
@@ -177,7 +224,24 @@
       <LocaleResource Name="MenuMinHeight.Hint">
         <Value>Specifies the minimum height of dropdown menus.</Value>
       </LocaleResource>
-      
+      <LocaleResource Name="MinChildCategoryThreshold">
+        <Value>Minimum child category threshold</Value>
+      </LocaleResource>
+      <LocaleResource Name="MinChildCategoryThreshold.Hint">
+        <Value>Specifies a treshold that must be reached before a subcategory will be rendered into the menu.</Value>
+      </LocaleResource>
+      <LocaleResource Name="MaxRotatorItems">
+        <Value>Maximum amount of rotator items</Value>
+      </LocaleResource>
+      <LocaleResource Name="MaxRotatorItems.Hint">
+        <Value>Specifies the maximum amount of products that will be displayed as rotator items.</Value>
+      </LocaleResource>
+      <LocaleResource Name="RotatorHeading">
+        <Value>Rotator heading</Value>
+      </LocaleResource>
+      <LocaleResource Name="RotatorHeading.Hint">
+        <Value>Specifies a heading for the product rotator.</Value>
+      </LocaleResource>
     </Children>
   </LocaleResource>
 </Language>
