--- a/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
+++ b/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
@@ -6260,7 +6260,7 @@
 		<Value>Geschenkgutschein ist eingelöst, wenn Auftragsstatus...</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.Configuration.Settings.Order.GiftCards_Activated.Hint">
-		<Value>Legt fest zu welchem Zeitpunkt der Bestellung Geschenkgutscheine aktiviert werden. Zur Auswahl stehen folgende Auftrags-Stati: - unerledigt, - wird bearbeitet, - komplett, - abgebrochen.</Value>
+		<Value>Bestimmt den benötigten Auftragsstatus einer Bestellung, die Geschenkgutscheine enthält, mit dem die Gutscheine automatisch aktiv sind. Zur Auswahl stehen folgende Auftrags-Stati: unerledigt, wird bearbeitet, komplett, abgebrochen.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.Configuration.Settings.Order.GiftCards_Activated.Pending">
 		<Value>Der Auftragsstatus konnte nicht auf "in Bearbeitung" gesetzt werden</Value>
