--- a/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
+++ b/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
@@ -12185,7 +12185,7 @@
 		<Value>Sonstige Einstellungen</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.Themes.Shopbar">
-		<Value>Shopbar/Megamenu</Value>
+		<Value>Shopbar/Mega Menu</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.Themes.Tables">
 		<Value>Tabellen/Container</Value>
@@ -16071,7 +16071,7 @@
 		<Value>Container Radius</Value>
 	</LocaleResource>
 	<LocaleResource Name="ThemeVar.Alpha.DisplayNavbar">
-		<Value>Zeige Megamenu</Value>
+		<Value>Zeige Mega Menu</Value>
 	</LocaleResource>
 	<LocaleResource Name="ThemeVar.Alpha.DropdownBackground">
 		<Value>Dropdown Hintergrundfarbe</Value>
