--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
@@ -1,9 +1,9 @@
 ﻿<Language Name="English" IsDefault="false" IsRightToLeft="false">
 	<LocaleResource Name="Plugins.FriendlyName.SmartStore.AmazonPay" AppendRootKey="false">
-		<Value>Pay with Amazon</Value>
+		<Value>Login and Pay with Amazon</Value>
 	</LocaleResource>
   <LocaleResource Name="Plugins.FriendlyName.Widgets.AmazonPay" AppendRootKey="false">
-    <Value>Pay with Amazon</Value>
+    <Value>Login and Pay with Amazon</Value>
   </LocaleResource>
 
 	<LocaleResource Name="AdminInstruction">
